--- a/SmartPick/FormLanguage.resx
+++ b/SmartPick/FormLanguage.resx
@@ -121,34 +121,101 @@
     <value>17, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="BunifuImageButton1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAMgAAADICAYAAACtWK6eAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EwAACxMBAJqcGAAADbhJREFUeF7tnQnUbeUYx9OcoVQ0EUWlVNfVRBpokFppQFFIoyQ0qpQhLisNEqFB
+        RTMtEaWklCZCA01KliaFSlKaRPH/3XUPe5377H32PndPZ+//b63fuut+3xne8+13n73f933e55nNGGOM
+        McYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGTCov
+        lVvLz8kz5aXyV/I6eaX8vjxafkCuKmeXxnSa5SUnxK3yPwX9mzxDbirnkMZ0hnXlRTLq+ON4l9xTziON
+        mVheIc+XUScvw3vkVtKYiWM3+biMOnbZni0XlMa0Hm57TpNRR67SO+SK0pjW8jzJbFTUgevw7/L10pjW
+        Mbe8REYdN81/y2vlCfIgyW3ZrnJvebg8Tz4go+em+aicKo1pFSfJqMNG/kLuIPOMG54jV5esiTwio9cb
+        9j65qDSmFbxPRh112BvkBnJcXigPlU/L6PWTXiw5uYxplEUki3hRJ01Kx55LlsEUeZuM3ifpLtKYRjlG
+        Rp1zIOMMrjBlw9XkKhm950DGL0wcGNMIi8t/yqhzDtxfLivXkpvL7eUe8uPyEHmU/Jr8ujxxhgzaj5Nf
+        kV+QhKfweAbv75fbys0krzdqEL+fNKZ2FpJ03qhTtknWR5aWDnY0pUNQIItvhHMwDXuyvFo+JKPO2Gaf
+        krfIc+Rhcme5tpxfGjMS1jFWkQxsGVcwFfuEjDpbl3xW/l6eJQ+Qb5YLS9Nzni/fIhkHMNgdNZbom5w0
+        rO0wZlpKmo7DFYJvxyMkG5OYXYo6ho29WxJjtqP0ImRHYI2CA/pdSQhGdOBtcbkt40vmU/K10kwQS8h9
+        JGMIDmR0gG253iuZkl5TmhaygNxJEiz4jIwOoq1HppVZt1lBmoZhK+u3JVOY0cGyzXq9JDrZq/k1wh+b
+        sPCbZHRQbPtkn8qX5HLSVARjiy/KvCHftn0yJvyxXF+aklhSEqvk26huSe6vjaQZk5fJ46UX8LotoTsb
+        S5OT58ppsg9hHvb/Xig98zUCwrjJ9RT9AW33/Zf8smSvi0nAfokrZPRHs/3zQbmd7D3smf6IrCvBmp0s
+        vydfLHsJg/CfyOgPY+3A++WWslcQZv6wjP4g1kYS6zWn7DwflQ41t+NIrF1nN3PNK0+V0Qe3Nq8EQ64s
+        OwVrG0XTclqbJrFda8hOwMnRZEJn202JyZv4RN1E3l4mow9o7azKSTKxm7RY4zhXRh/M2rJkNnQZOXF8
+        VkYfyNqyJd/XC+TE8Hbp/eC2TimbPRHZ7Kn/7Qwitgn3kq2H+Jmo8dZW7T8kX9CthYzjUcOtrUtyoLUS
+        isPcKaNGW1unZNBsHe+WUWOtrduLZOsgFWXUWGub8NWyNbCaGTXS2qakYldrOFJGjbS2Kf8qW7Mu8msZ
+        NdLaJm1F5nk2sHjV3LbRfWXjvFVGjbO2aVm0bhyyd0eNs7ZpqRHTOJ+QUeOsbVq25zYOmfCixlnbtI/J
+        xuEKcq21LdUYY4zpEPNJUouuIsmiSCAjOXgpG3yU/KZkCo5UQNfI31gbSI1DCu38UJ4uKaREgVCSD1K0
+        dXO5lqS020KyNSvnbErZQDLF+3l5hrxc3i7ZtBINmKytWson3CcZe5AwhBPqAPlOOVXyxV0Js8sdJG9K
+        jEvUOGvbLilvb5bk+V1JlgYFTS6QnKHRG1s7SZIxfk9ZOvNLCi9y2TpFUl/uLzJqhLVNS31Lbvsp70YZ
+        6l3kFFn7WIXE1K+U68it5O7yYHm0PM7aCj1WHi750t5RbiqZHFpMTkQaIGOMaS2LSGZxDpPnSAL4uO24
+        S/5WUtifaIjeljoz/WQTebF8Rkb358P+Sbq6bI/g/pP1muXl4jP+3wfYwMbCWnQSjHJFaToOSYyPkA/I
+        5MGn6Aq3E0zvvUR2EQamv5PJz53X8+U4UOJiZ/kDSXj5nyUZbj4pF5SmRXC/fZuMOkBSbjt+JNkN2ZUr
+        C4n7fimjz5slfwtmgpiJLMIcki+brIVjTpbVpWkJzHdHByrLG+VE1pcY4kAZfb4s75bjJDZ4jSScI3rN
+        YTmBlpCmYd4kowOUR7KytOVKQlkxYtzWnf6/fHArQ7Wl6LOl+YQsmlyNcnqsORSNqCC0wzQMGSyig5NX
+        breaZCnJFGyyTYyl8rC/TD4vjyysFeFtkqnh6LVGeZM0DTO3JBAtOkB5JJy6KQjh+YOM2kUU6ihuldFz
+        0yTidR6ZB2YBx7l1TXq8NC2A25Nxc3Q9KJtimozahIfILIhKjZ6XZZ6rB7dtxC89LaPXGCWD/5MkIUim
+        RZCTNTpgeWxqsM5gOWoPUkI7i4/J6HlpEsD3IpkGV+K95UMyen4emUl8gzQthJCJogPWge+QdbOkjNoy
+        kHJ27MdJ4woZPS/NtAIzTFJsI9Nu9fLK7RSDedNiPi2jgzdKtgTXzXoyakvStM09i0o2AUXPSZNo62HY
+        Fn2djB6fVxZim/iCMWNATNE4W39PlnWzhYzakpSV6ggW6qLHp/mUZOV7AFPJRa9Akewf91hjwuBSHx3M
+        LH8q64bEA1FbkqbVuiAaN3p8moTawNqShBnRY4pKAo7K9nqb6thQRgc0S+KY6oZv8agtSW+Qw7AxKHps
+        lmSSYdAf/a6ozG59UJoJhdus6MBmyeC+bpaWUVuSMs5I3hoxoJ7VMcOsSIyVZ6kmHDrROGsiBP3VCUF/
+        T8qoLUnfKAdsL6PH1CEBkV2Nhu4dD8voIGdJRHDd5An8I5wEaB+LmtFjqvYbMu8KvJkAig5icVlZN4Sb
+        R21JyvoF6yGE6Ue/r1KCE/eQpmMwaxMd8CxXk3VDUr6oLUnvlQQvRr+rUsLVyaJpOsgJMjroWRI2Xzev
+        klFbmpa9MkwimI5ykIwOfJZMn9YNEwrjjJeq9GyZnDkzHWRbGR38LEmR0wQXyag9dcvMHyE3bdlAZirk
+        dTLqBFkyhdoEhLVH7alT1oE2k6YnMCUadYQsd5NN8C4ZtacuCVFnc5TpGUWDFtkL0QTsD4/aU4eEoLCr
+        0fQQ9kNHnSJN0nA2ARuV8mZBLEvWN6jWZHrMeTLqHGkeKZvijzJqUxXeIx1PZaaX4Yo6SJpnyaYgI2HU
+        prKlLmQTITWmhRTds01BIAIIm2Cclf+isrlpAWnMdLaTUUfJMtqWWgfkx43aU5YEObIH3pj/wX7rqLNk
+        eYucU9YNOxqj9pRlU4ugpsWQPDnqLKMsmnmwDMbNzJ5HVuqNmQlqXkQdZpTkj1pV1gU7IItmKCniGtKY
+        mSB1Z9Rh8khCN1Lr1AEVWKM2lCGZS4wJ2VhGnSav18uqS5MRNXunjN6/DN8jjQmhNHDUaYpIgoQqi1yy
+        lTV63zJ8XDrToUml6DpImqTkXFmWzbhZIPPKvg5jUiF0JOo440jRmd1lGXsliL06RkbvU6ZNhe+bCeFU
+        GXWcWfHnclbimMhsSDK46LXL1uXPTCYXyKjjlOFlkgFwnlBxxgFbS2qXR69VhRTWMSaT4bJmVUjYOLmt
+        yFN7sCRFzocl4x9uo66SJI6OnlulruxkRnK7jDpPH3yvNCaTrDreXffl0phUmG2qe5deW2TzlTGZUIgy
+        6jx98FvSmEyoehR1nj7YVHYWM0GMG+reBZ3Cx4xkIxl1nq5LomtjRtJ0MramZO3FmJGQRjPqQF2XUBZj
+        UmE/OcGAQO0NCk5GHamLOrzEjIT9FeSYGiyUrS/bVl6gKneVxqTyGTnoLKyik9UEVpB3yGRn6ppsER5c
+        OY2ZiZ3lcKdhJZ1NSdT3I5vg1XL4MV3RW2tNKptIomqjjoMXyoXlvJL0otFjJllyahkTQnqex2TUcZJy
+        C0L6G2K02lCwpiwp8UDUgDEzQZFJ8ulGHSeSfFdsmwUSOnRhhov0qsbMxEKSykhRpxnl6ZJdflS1fWjG
+        zyZRstcbMxOMJdipF3WavN4sKcG8nJzEjVVsJ24ih7CZALi1IhVP1HGK+KgkmztXo6qTR5cpXw4u02wy
+        YVbqchl1oKIeJeeTJyZ+1lZ/Jl1T0ORiLnmSjDpSUflWJk3OvrKtOxHJiuIrhynMPrKMTs2M2HqSQEdu
+        v6LHNOWZ0ivlZmw2lWV0asoQkLJniqwyqXQRWbcpI6Oj6TkrybJirs6Vy0jKB0S/r0MyMA7iyYwpBTKx
+        XymjDldUZspWkyckfla1XAVPkxtIXzVMJXCvTqbDqAMW9Um5k/yQzIr3mhVZh/mq5DZxHmlMLewny5qR
+        YrZsQ3l/4mfjyBiHW6djJRG4rjxrGqXMGSkqTq0pyfAe/X5YYr04Gcgyv5dcR3qa1rQOit/cJaNOXFR2
+        J24pD5WDqxOVnDgRviOnyW0k7+lpWTMxMHgvGr/FrkR2KRIBnCz0/6xk6pVtvYtJYzoBA+BTZPIkSPMR
+        SSBjkqNl8jGXSHYqGtMp9pejBu+UbxtmcTn8uEulMZ1jC8luvOEOP5Bp3WEIs08+hrqFVRT3NKYVEE7C
+        Vtxkpx/ImGMYyqglH8OuRGM6zaIybdqWMQe3VVw5ODmSuw9ZiDSmFzB4J7wjeXJkeaNk/4gxveJAyRRu
+        dFIMZNFxeHbLmN7AImBWGiEWAY3pNVPlPXL45HAWEWNmwAp5MlXpNdKhI8YkYPbqDEn8FZlUjDEBy874
+        1xhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMcYYY4wxxhhjjDHGGGOMMb1nttn+C890jS9sfk73AAAAAElF
+        TkSuQmCC
+</value>
+  </data>
   <data name="ButtonEngMenu.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJIAAAAuCAYAAADDc0CAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIpSURBVHhe7dy/axRBHEBx/yI7q3RW6VJJmlSmECGFaZJG
-        CysLAxqLK4QUFgmCKQ4sUgkiBkQLCUESUkQQrkgkREKKoMXIm9wsOe52uT2+3b0PLByXH80+ZuaWmbuV
-        pACGpBCGpBCGpBCGpBCGpBCNIV39+5t2DnbTyvv1tPj2aZp9vZRuP5/3mpKL+819f9RdS939j+ni6rJf
-        xrDakD4ff8//iIiI6duvH6n357T/U00D7jf3/cPR1/Rkp5N7IKhRhkKiOv7o4faz9PvyvP+u1NzGQEj8
-        4r03q7XVSWC2Wth8PDBDDYREbUakcTDlsX4qqpCojCFLGtfLT1tp40s3v84h8emMhZRrIrVBNyyFjs96
-        1yExnTGtSW0xIjEy5ZB4TsBHPKmtw5OfeVTKIc1tLOfhSWqL6e3Oi4XrkGZe3W98aik14Sl4DokX0qQM
-        SSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSGqkNgGwHYAaRJVSGyz9cyaJlWFxKZ/Nv9L
-        bbEhko2ROaSy71Zqq+z3zyExrVGV6yS1Vfb755DQ2X2XL2lc5QtGUIXEaMTJyb3eUf8dqR5nIJnFyl7/
-        KiSwcCoH3qQ6RMSgw7HtYiAkMCIRUzmKK93EeoiR6GZEGAoJTHN8iqM6VuUe5Z5uTF9lPcTietTRtZEh
-        FVTHR7u7nQf5oZPXdF6ceyxfuFanMSRpXIakEIakEIakEIakACn9B8QBDPTxqqReAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAMMAAAA5CAYAAACLdp/VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJNSURBVHhe7d2vi5RBAIdx/yKbyWaymcRySYMIBi1aNJgM
+        Cv4IG4QLBkXQsGC4JIh4IBpERJQLJwgbVESRC4eGkWfuOy8u+6PvzvOBF5a9u03z3My8C+8cKpIqY5DC
+        GKQwBimMQQpjkGJpDPt//5Stj9vl0tM75cyja+X4vfPl8I1TXl4rczFmGbsXxjfL+P3z8nt/L6N71sIY
+        Xu6+rR9ECATx5suHMvn1LT+VVgNjlrH7bOd1ubo1qmOaKOaZiYFy+KNzT66X73s/8660HpaN76kY+MWT
+        9y8vLEdaF6x8Nh5cmVrtTMVAMYagXrB8Yj/RDDFQClOH1JPbLx6WzVfj+rrGwF0jNhbuEdQbxj5bg90f
+        k4MYWBqxRJJ6xMzADFFj4B4st56kHn36+rnODjWGE5sX6zQh9Yil0pFbGwcxHL17euk3c9K649vqGgMv
+        pJ4ZgxTGIIUxSGEMUhiDFMYghTFIYQxSGIMUxiCFMUhhDFIYgxTGIIUxSGEMUhiDFMYghTFIYQxSGIMU
+        xiCFMUgxxMDTxHiqmNSrIQaewO0RVerZEAPnMnA+g9QjnjPM84ZrDO2R3FKP2pEMNQaWSJThvkE9akcy
+        1Bgw2n5cL6kn7ZxzDDEwK3DY27vJTt6R1hvHtrEiascxDDGAjUQ730paZ4TAP39O/GymYgAzA0G0ExCl
+        dcP+gBnh/xAwEwNYMnF3iXLYaXsKqFYdS6G2P2DDPO+kqrkxNJTDLadjo7P1Swkvr1W9OKqNEAhikaUx
+        SD0xBimMQQpjkMIYpKqUfz0qoQ3Va3hNAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="ButtonSpaMenu.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAJIAAAAuCAYAAADDc0CAAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIpSURBVHhe7dy/axRBHEBx/yI7q3RW6VJJmlSmECGFaZJG
-        CysLAxqLK4QUFgmCKQ4sUgkiBkQLCUESUkQQrkgkREKKoMXIm9wsOe52uT2+3b0PLByXH80+ZuaWmbuV
-        pACGpBCGpBCGpBCGpBCGpBCNIV39+5t2DnbTyvv1tPj2aZp9vZRuP5/3mpKL+819f9RdS939j+ni6rJf
-        xrDakD4ff8//iIiI6duvH6n357T/U00D7jf3/cPR1/Rkp5N7IKhRhkKiOv7o4faz9PvyvP+u1NzGQEj8
-        4r03q7XVSWC2Wth8PDBDDYREbUakcTDlsX4qqpCojCFLGtfLT1tp40s3v84h8emMhZRrIrVBNyyFjs96
-        1yExnTGtSW0xIjEy5ZB4TsBHPKmtw5OfeVTKIc1tLOfhSWqL6e3Oi4XrkGZe3W98aik14Sl4DokX0qQM
-        SSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSEMSSGqkNgGwHYAaRJVSGyz9cyaJlWFxKZ/Nv9L
-        bbEhko2ROaSy71Zqq+z3zyExrVGV6yS1Vfb755DQ2X2XL2lc5QtGUIXEaMTJyb3eUf8dqR5nIJnFyl7/
-        KiSwcCoH3qQ6RMSgw7HtYiAkMCIRUzmKK93EeoiR6GZEGAoJTHN8iqM6VuUe5Z5uTF9lPcTietTRtZEh
-        FVTHR7u7nQf5oZPXdF6ceyxfuFanMSRpXIakEIakEIakEIakACn9B8QBDPTxqqReAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAMMAAAA5CAYAAACLdp/VAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAJNSURBVHhe7d2vi5RBAIdx/yKbyWaymcRySYMIBi1aNJgM
+        Cv4IG4QLBkXQsGC4JIh4IBpERJQLJwgbVESRC4eGkWfuOy8u+6PvzvOBF5a9u03z3My8C+8cKpIqY5DC
+        GKQwBimMQQpjkGJpDPt//5Stj9vl0tM75cyja+X4vfPl8I1TXl4rczFmGbsXxjfL+P3z8nt/L6N71sIY
+        Xu6+rR9ECATx5suHMvn1LT+VVgNjlrH7bOd1ubo1qmOaKOaZiYFy+KNzT66X73s/8660HpaN76kY+MWT
+        9y8vLEdaF6x8Nh5cmVrtTMVAMYagXrB8Yj/RDDFQClOH1JPbLx6WzVfj+rrGwF0jNhbuEdQbxj5bg90f
+        k4MYWBqxRJJ6xMzADFFj4B4st56kHn36+rnODjWGE5sX6zQh9Yil0pFbGwcxHL17euk3c9K649vqGgMv
+        pJ4ZgxTGIIUxSGEMUhiDFMYghTFIYQxSGIMUxiCFMUhhDFIYgxTGIIUxSGEMUhiDFMYghTFIYQxSGIMU
+        xiCFMUgxxMDTxHiqmNSrIQaewO0RVerZEAPnMnA+g9QjnjPM84ZrDO2R3FKP2pEMNQaWSJThvkE9akcy
+        1Bgw2n5cL6kn7ZxzDDEwK3DY27vJTt6R1hvHtrEiascxDDGAjUQ730paZ4TAP39O/GymYgAzA0G0ExCl
+        dcP+gBnh/xAwEwNYMnF3iXLYaXsKqFYdS6G2P2DDPO+kqrkxNJTDLadjo7P1Swkvr1W9OKqNEAhikaUx
+        SD0xBimMQQpjkMIYpKqUfz0qoQ3Va3hNAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="PictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
