--- a/SmartPick/editMenu.resx
+++ b/SmartPick/editMenu.resx
@@ -124,6 +124,85 @@
     <value>159, 17</value>
   </metadata>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="Button1.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAQAAAAEACAYAAABccqhmAAAABGdBTUEAALGPC/xhBQAAACBjSFJNAAB6
+        JgAAgIQAAPoAAACA6AAAdTAAAOpgAAA6mAAAF3CculE8AAAQ8UlEQVR4Xu3dB9AdVf3GcZAuYkJRaYIQ
+        kYAoaigiUVGkjgLSrCBYRiwBBhFhEhgpSjMEQu8IDKCiQwkKoRMVFMIA0gQlNFERaSIoRX2eIdGX+Et4
+        d/fs3T2738/MdyYz/v8k792z97139+w58wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPTOa9RItaIapVZTo2f+eQU1Qs2rAGRkEbWW2lZ9S01SF6qr1b3qSfWi+vcwe0E9oe5W
+        V6kL1PfUXurjyn/XogrAgK2uPqEOU5epR9S/VHQi15n/zgfVz9TB6pPqbQpAIguosWq8ulT5N3l0MrYp
+        /xsvUfuo9dR8CsAwraR2VVPU31V0kuWUfwZ/HfmK8rUHALNZUx2k7lDRSdSlblP7q7croLdWVvuqe1R0
+        ovQhv+FNUG9WQOctrHZUvjrfxIW7tubX4nLlC4m+7gF0ir/7+jbaYyo6Aeh/Paq+o5ZTQNbWVT9SRe7B
+        08t5LsLZ6l0KyMqGyhNoooFNxfMt0PUV0GobqOtUNIiper5O4LkFQKu8W3lGXDRoKX2eV+DnGIBGLaNO
+        VS+paKBSffm6ynFqKQUM1PxqT/W0igYnDa7H1TjlJx2B2vliVB9m7OXWdOWnFIFaLKZOUEzgaW/+Kub5
+        Fq9VQDK+redHX6NBR+3LayBwtwCVeaGNo1TOv/WfVb9X16qpylfQz1GnqRPVSTP/fK7y/+ZbbdPUDPWc
+        iv6bOeRPA55RyNRilOKFN36josHVtp5S16jj1R5qE+UnDP0GVpVX/vFtzs2VL3weq/xm8jcV/Vva1q+U
+        H7wChm1n1dZn8f2b7SZ1hNpeNTm4vQLQp9Vk5Ytwbb0d6jfIbRQwV35a7xQVDaIm8/UH/+b1eny+GNlW
+        iyuvS+ivFW28ZuK1En0LF/g/y6pfq2jgNJEX5DxQvUPlyrflvF6gL8pFP2MT+asSk4fwCmurP6lowAwy
+        Pwrri45dfALOT0b6U8xfVfSzDzJf4Mz5jRUJbad8pTwaKIPKv5W80m8fPp4upD6rblDRazGofF3AF0vR
+        Y158s6lbfH7e/XTV5+fd/RXBtySbWi/Bx2AnhR7yuvrRoKi7fyhfNV9e4WVeCdlzEp5X0WtWd3sr9IQf
+        GjlZRQOhzjy4j1Z+ghAxb0/mSUlN3E70FGJ0nDepOEtFA6DOzldMRhk+P+t/sYpeyzrz48XoKJ/8nu4a
+        Hfi6ukWxlFV5GyvfDo1e27ryVxF0jD/2D/I3v6fJ7q54Rr06z+X3NmODfC6BTwIdM8jv/F4ajAt86b1V
+        +XZp9JrX0eEKHeADGR3g1Hl1oC8q1GdetZsa1LwNb7WOjHmwRAc2ddcrLvINji8S3qqiY5G6zylkyDP8
+        6p7k4//+oYoHTAbPD2758efouKTMk4V8MRIZWUfV/THR++BvodAsP478jIqOUao8bZjdjDPhC3B1P9hz
+        lxqt0A6eTn2/io5Vqu5TSyq0mD8W3qiiA5iqK9VIhXZ5o/K1mOiYpcrbvXk+CVrK00ijA5eqMxTf99vL
+        vwC8GWt07FI1UaGFvqCiA5YqL2yB9vOtQk/kiY5hqrZWaBEv7lDnRb9vKOTFKwJHxzJFvgD8FoUW8CYQ
+        t6voQFXNt/m+ppCnfVV0XFPkBU34OtgCx6joAKWIkz9/E1R0bFN0gEKDPEGjrsk+fOzvju+q6BhXzSsZ
+        vVehASPUwyo6MFXzgEG3eF/H6FhXzY8r++4DBqyuJ/x8KxHd40ezf6yiY161QxQG6AOqjo/+3hePCzvd
+        5a3S6liN2F8F+ry460AtqOpYJeZO5a8V6DbPGHxARWOgSt6D0HMQUDOvDhMdgCr5vq73uUM/eLPTOvZ+
+        /LJCjZZTqZ/88leJjyr0y44qGg9VekwtoVCTOtb1Y4pvf3kB0GhMVOlIhRp4F5nUF/5+objo11++KHib
+        isZG2byAyCoKiV2hohe8bF7kYUWFfltDpV5x2E8kIqGNVPRCV4k94TDLHioaI2XzJ9UxComkXuhhigJm
+        8e27n6torJTtEoUENlXRC1w23/JbVgFD+TawN26NxkzZvDYlKkr9zvx1BUT2U9GYKduFChWMVdELW7ab
+        FLO1MCeeZXqvisZOmXwtgNWEK/A7aPTClskHYz0FzM1mKho/ZTtdoQTvBZfyvv85ChiOS1U0hsr0T/Um
+        hYImq+gFLZMPwgoKGA6vMfmSisZSmb6tUMCiylfroxezTJMUUMSZKhpLZfLCNewnUEDKJb791JcfAQWK
+        WEn5Of9oTJVpG4VhSrlow/cUUEbKjWYuVhgG77kXvYBl8nf/ZRRQhicHpboW4E8TTEAbhpQruJ6kgCrO
+        V9HYKpOfOcCrmKGiF69ovoW4mgKqWF9F46tMNyvMxboqeuHKNFUBKUxX0Rgrk+e3YA58wS560cr0cQWk
+        8HkVjbEy7a0wB79T0YtWtEcU912RiveffFpFY61oNyoE/H09esHKdJgCUkq1EY2vTXFnKvBNFb1gZVpd
+        ASl5M5porJXJE90wmytV9GIV7VYF1CHVhiI/UBjCq7N60k70YhVtvALqcISKxlzRHlesSzHER1T0QpVp
+        VQXUIeWcAO9OhJkOVNGLVLR7FFAX/9Z+VEVjr2i7K8x0tYpepKLx2C/qdoaKxl7RvFU5xPu2P6uiF6lo
+        XkEYqNNnVDT2iua5KhB/F4peoKI9r3wxEahqlPKqQFEpN6n5kIr+jijvYLSY6pxUi394+XCgCk8ff0hF
+        46sN+dFkr235etUZqdb+Y5dfVPFBlXIdwDq7THVGqguAWyqgrItUNK7a2jtVJzyhoh+waKy2gipSbggy
+        iDrxtOtSKvrhivZnBVTxUxWNrba2psre+1T0wxWtU9+J0IjUOwLV2TWqEz6noh+waKz8ixS8cm80vtqU
+        FxftzPf/CSr6IYv2VQVUtbJKvUV46o5SneFVe6MfsmgbKCCF/VU0xtqQr3WNVJ2RahPGVRSQgmeT3q+i
+        cdZ0O6tO+aWKftAieYkl1v9DSlupaKw12fWqc/xARPTDFsnzCIDUfGcpGm9N5BmKY1TnPKeiH7hItygg
+        NW8L5gfMojE36I5XneSP79EPXCSvJQjUIeU2dWV7TC2hOmeEin7gok1RQB1ep7y3fzTuBtUuqpNWUNEP
+        XLTzFFCX7VU07gbRTaqzi4d67f7ohy4aOwCjblepaOzVmb8ev1d1lh9miH7woh2pgDq9Xb2govFXV6eq
+        Tku1FBjbgGEQJqpo/NWRb22/UXUabwDIiZfh+qOKxmDqxqnO4ysAcrODisZgyry1XS9mtnIREDmapqJx
+        mKqxqhe4DYgc+ZNrXYuHnq16g4lAyNXRKhqLVXpKLa16hanAyNHiKtUegbPaU/UODwMhV6k2tHF3qPlV
+        7/A4MHLlKbo3qGhMFu3DqpdYEAQ5W1tV/Rr7Q9VbqZYE87PbQBNOVNGYHE7PqOVVb7EoKHK3pPqrisbl
+        q7WP6rXxKnphivY1BTTFy9JH43Ju3aMWVL3GxiDogteom1U0NufUpqr32BoMXbGeGu4FwQsUJNXmoJ6U
+        ATTtDBWNz6F57stbFGZ6XEUvVNHYHhxN8zP8T6pofM5qP4UhrlbRC1W0LRXQtN1UND7dDLWwwhCTVfRi
+        Fe1gBTTNk9Kmq9nHp68PcOEv8Hk1+4tVpp8roA3epC5Rsy4KeiWhTykEUi0N5kUbvbEj0Ba+yL2q6uzS
+        3in4xXlWRSd10TZTADKT6kLgJAUgMweo6IQumqdXAsjMhio6ocvk71wAMuJ7o/9U0QldtAkKQGauUNEJ
+        XTSvqw4gM99U0QldJu85ACAjo1V0MpeJ7cKADP1ORSd00bzYKOsEApk5XEUndJm2VgAysq6KTuYyTVUA
+        MnOfik7oovlBDC4GApn5ropO6DKdrABkxDP5opO5TJ5ctIwCkJHrVXRCl2miApCRVIuEOD9q7LXaAGTi
+        tcqbfkYndJmOVAAykmqtQOdrASsqAJkYparuvDq0cxWAjHgHlehkLpPfTLx7C4BMjFXRyVw2L9fsfdwA
+        ZGKaik7mso1TADKxiYpO5LI9pdhGDMhIyolBzps2AMjER1R0IldpJwUgE6nWDJyVvwqwTTOQiTEq5bwA
+        90s1vwKQgTNVdCJX6RAFIAPLqWdUdCKXzZ8qPqYAZGBvFZ3IVXpSsaMQkIEF1V0qOpGr5P/mSAWg5T6g
+        Ul8QdL7TwEVBIAMnqegkrtrpCkDLvV49pKKTuGoHKwAtt5Gq46uA21MBaLmjVXQCp+jrCkCLef3A21V0
+        AlfNny54E8iXnyTd/+U/osvWUF79NzqJU8TXgfxsqf6hfPy4ptMDX1Czn7gpY8pwPnZQLyiOX8+cqoYe
+        9NR9XzFPoN32UnO6MMybQMctrH6tooOfqisVMwbbx2/MJ6romA2NN4GOW179SUUHP1V3q9EK7bCEukpF
+        xyrKG9Ciw9ZRdV4UdF5QxBea0Kx3qxkqOkZzizeBjttO1TVJaGiHKa4LNOPL6jkVHZfhxJtAx+2mogOf
+        Ol93WFlhMHwN5ocqOhZF402g4w5V0YFP3dPqSwr18gKxqZ8B4U2g405W0YGvo8vUmxXSGqFOUHV9reNN
+        oMO8HdhZKjrwdfQ3tYdiG7I0tlV/UNFrnTLeBDpsPnWOig58Xd2i3q9QzmrKn6ii17audlHoKL8J1LGy
+        8Kt1vuIi4fC9QU1Ws0/nrTsvE+91JtBh/lg+yGsCs3peHauWUYj5e/4ByhdUo9ewzjyR6HUKPeEpodFA
+        qDs/oebfbp6xiJctqfzY7uMqes3q7ifK08jRM7uqQUwWivLH2zPUmqqv/LXIC7qk3uuhSH5+wF8N0VO+
+        wvx3FQ2OQXWN+oRaQHWdv4JtoS5WTb35Ov/d+yhgnrXUH1U0UAbZo+oo5fntXeMr+l6Y42EV/eyDzG/4
+        nioO/Je3HfuVigZME3mjkoPUO1WuVlfj1W0q+hmb6EH1HgX8H18IOkVFA6fJ7lfHqa1Um29TLab88f4Y
+        9XsV/SxN5iv9SylgrnZWTV8XmFMvqZvUJOXrBqNUU/x3+9/gf8uN6kUV/Zubzt/3D1TMzMSw+eNrmz66
+        zi2vTeALif6U8A21qXqX8orJVfneuK9JbK68OKrn41+rPN05+re0LV/b8QNEQGGLKP92a/JqddW8MMp9
+        6jo1VV2ozlWnKd8C8xZr3g7tPHWRulxNUw+oKs/atyHfaeAjPyr7sPIJEQ0yal/+RORVooFk/FHYU3lz
+        /jTQh6YoZlmiNuurunYiovI9orZXQO28BqAviDXx0Aq9Mk+pPkL5QSJgoJZW3ozEt+aiwUn19lPF8uxo
+        nG+5/UxFg5TSN11tqIBW+aDyPfJo0FL17lRbK6DVfNvwChUNYiqel1bzU5vzKiAb3qHI69dzjaB4vt3q
+        iUsbKyBrK6iJ6i8qGuz0v/wMxvHKU7GBTllIee96z9tnQtEr88NE3liFRTnRC14Oaz/1WxWdEH3Izyh4
+        5yZu5aHXvC6gF//wVe7oROlSfsPzhqq+PgJgNiupccpz2tu6JkGR/EThpcobta6qAAyTFwn1swdevNIT
+        jZ5Q0UnWpjw92if8BOV5EX1Y6BQYGC+u6VV4/N3ZJ5r3zGvigqL/Tu/S63+D91j4jOK7PNAAr/zjlY23
+        UXspPxzjhT+uVvcof3Ioss2W/2/9/+OFSb2O3gXqcOX/ttclHKO8WAqAjHgmnZ+a8/blXs/Pv7Gd/+xn
+        6LkFBwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAkMg88/wHT1MXP2rX
+        X6cAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="BtnBuscar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAEgAAAA0CAYAAAApDX79AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
